# pydatalog

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: demo.py
src/pydatalog/: __init__.py  db.py  diagnostics.py  execution.py  nodes.py  printer.py  spans.py  validation.py  visitors.py
tests/: conftest.py  test_execution.py  test_printer.py  test_validation.py  test_visitors.py
