[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydatalog"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",


  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/pydatalog#readme"
Issues = "https://github.com/U.N. Owen/pydatalog/issues"
Source = "https://github.com/U.N. Owen/pydatalog"

[tool.hatch.version]
path = "src/pydatalog/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydatalog tests}"

[tool.coverage.run]
source_pkgs = ["pydatalog", "tests"]
branch = true
parallel = true
omit = [
  "src/pydatalog/__about__.py",
]

[tool.coverage.paths]
pydatalog = ["src/pydatalog", "*/pydatalog/src/pydatalog"]
tests = ["tests", "*/pydatalog/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
